--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ header {
   border-bottom: 2px solid #e4e4e4;
 }
 
+
 .logo {
   font-size: 24px;
   font-weight: bold;
@@ -69,6 +70,7 @@ nav ul li a {
 .main-img{
   width: 425px;
   height: 505px;
+  margin-top: 25px;
 }
 
 .main-demo{
@@ -134,6 +136,7 @@ nav ul li a {
   color: #fff;
   padding: 10px 20px;
   border-radius: 5px;
+  cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -141,16 +144,42 @@ nav ul li a {
 }
 
 footer{
+  width: 100%;
   height: 255px;
   background-color: #007bff;
-}
-.footer-start{
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.footer-text{
+
+.appointment {
+  background-color: #007bff;
   color: white;
-  font-size: 30px;
-  letter-spacing: 2px;
+  padding: 20px;
+  width: 90%;
+  max-width: 600px;
+  text-align: center;
+  margin: 20px 0;
+  border-radius: 8px;
+}
+
+.appointment h2 {
+  margin-bottom: 20px;
+}
+
+.call-button, .telegram-button {
+  background-color: #ff5a5f;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+
+.telegram-button {
+  background-color: #007bff;
+  border: 1px solid #fff;
+  margin-right: 20px;
 }
