--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,12 @@ nav ul li a {
   cursor: pointer;
 }
 
+.btn:hover{
+  color: #ff5a5f;
+  background-color: #fff;
+  border: 1px solid #ff5a5f;
+}
+
 .hero {
   height: 535px;
   background-color: #007bff;
@@ -87,6 +93,11 @@ nav ul li a {
   border-radius: 5px;
   cursor: pointer;
   margin-top: 20px;
+}
+.btn-2:hover{
+  color: #ff5a5f;
+  background-color: #fff;
+  border: 1px solid #ff5a5f;
 }
 
 .box{
@@ -142,6 +153,11 @@ nav ul li a {
   align-items: center;
   margin: auto;
 }
+.btn-3:hover{
+  color: #ff5a5f;
+  background-color: #fff;
+  border: 1px solid #ff5a5f;
+}
 
 footer{
   width: 100%;
@@ -168,10 +184,10 @@ footer{
 }
 
 .call-button, .telegram-button {
-  background-color: #ff5a5f;
+  background-color: #007bff;
   color: #fff;
   padding: 10px 20px;
-  border: none;
+  border: 1px solid;
   border-radius: 5px;
   cursor: pointer;
   margin-top: 20px;
@@ -182,4 +198,18 @@ footer{
   background-color: #007bff;
   border: 1px solid #fff;
   margin-right: 20px;
+}
+
+.footer-nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 20px;
+  background-color: #222222;
+  border-bottom: 2px solid #e4e4e4;
+}
+
+.footer-text ul li a{
+  color: #fff;
+  font-weight: bold;
 }
