--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,14 @@ nav ul li a {
   font-weight: bold;
 }
 
+nav ul li a:hover{
+  color: #ff5a5f;
+}
+
+nav ul li a:active{
+  opacity: 0.5;
+}
+
 .btn {
   background-color: #ff5a5f;
   color: #fff;
@@ -54,6 +62,10 @@ nav ul li a {
   color: #ff5a5f;
   background-color: #fff;
   border: 1px solid #ff5a5f;
+}
+
+.btn:active{
+  opacity: 0.5;
 }
 
 .hero {
@@ -100,6 +112,10 @@ nav ul li a {
   border: 1px solid #ff5a5f;
 }
 
+.btn-2:active{
+  opacity: 0.5;
+}
+
 .box{
   width: 1440px;
   height: 1490px;
@@ -116,6 +132,7 @@ nav ul li a {
   width: 200px;
   height: 200px;
   border-radius: 25px;
+
 }
 
 .box-type{
@@ -159,6 +176,10 @@ nav ul li a {
   border: 1px solid #ff5a5f;
 }
 
+.btn-3:active{
+  opacity: 0.5;
+}
+
 footer{
   width: 100%;
   height: 255px;
@@ -194,10 +215,23 @@ footer{
   margin-right: 20px;
 }
 
+.call-button:hover{
+  background-color: #ff5a5f;
+  color: #fff;
+}
+
+.call-button:active{
+  opacity: 0.5;
+}
+
 .telegram-button {
   background-color: #007bff;
   border: 1px solid #fff;
   margin-right: 20px;
+}
+
+.telegram-button:active{
+  opacity: 0.5;
 }
 
 .footer-nav{
@@ -212,4 +246,12 @@ footer{
 .footer-text ul li a{
   color: #fff;
   font-weight: bold;
+}
+
+.footer ul li a:hover{
+  color: #ff5a5f;
+}
+
+.footer ul li a:active{
+  opacity: 0.5;
 }
